fix cell text alignment CSS

--- a/week3/vue-tic-tac-toe-minimax-ai/css/style.css
+++ b/week3/vue-tic-tac-toe-minimax-ai/css/style.css
@@ -48,7 +48,7 @@
     height: 33%;
     border: 1px solid green;
     font-size: 14vmax; /* higher of vw or vh */
-    line-height: 95%;
+    line-height: 110%;
   }
 
   .celebrate{
